deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      serviceAccountName: portfolio-sa
      containers:
        - name: portfolio
          image: sumeetp111/portfolio:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
                  #- name: html-volume
                  #mountPath: /usr/share/nginx/html
                  #volumes:
                  #- name: html-volume
                  #persistentVolumeClaim:
                  #claimName: portfolio-pvc
                  #
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
spec:
  selector:
    app: portfolio
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
